--- a/javascript/lesson21/index.html
+++ b/javascript/lesson21/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LESSON21</title>
-    <script type="module" src="./axiosTest.js" defer></script>
+    <link rel="stylesheet" href="./styles/style.scss">
+    <script type="module" src="./script.js" defer></script>
 </head>
 <body>
     
